--- a/core/client/theme/property-entries.scss
+++ b/core/client/theme/property-entries.scss
@@ -14,6 +14,10 @@ $property-entry-color-error-clear: #e57373;
   color: $property-entry-color-default;
 }
 
+.property-entry--field--button {
+  border: solid 1px rgba(0, 0, 0, 0.1);
+}
+
 // This is for entires that are user set or that have been poked
 // a poked field is poked just to display errors, eg. it's basically
 // going to display any errors as if the user had set it
