--- a/core/client/theme/property-entries.scss
+++ b/core/client/theme/property-entries.scss
@@ -3,6 +3,7 @@ $property-entry-error-font-height: 0.65rem;
 $property-entry-color-default: #424242;
 $property-entry-color-error: #f44336;
 $property-entry-color-error-clear: #e57373;
+$property-entry-color-icon-focused: #303f9f;
 
 .property-entry--error {
   color: $property-entry-color-error-clear;
@@ -14,8 +15,25 @@ $property-entry-color-error-clear: #e57373;
   color: $property-entry-color-default;
 }
 
-.property-entry--field--button {
-  border: solid 1px rgba(0, 0, 0, 0.1);
+.property-entry--input--menu-item-placeholder {
+  // undebuggable style this is the only way to overwrite it
+  // it can't be debugged any attempt to debug on why the placeholder is
+  // gray will make it become white
+  background-color: inherit !important;
+}
+
+.property-entry--field {
+  width: 100%;
+
+  .property-entry--field--button {
+    border: solid 1px rgba(0, 0, 0, 0.1);
+  }
+}
+
+.focused {
+  .property-entry--icon {
+    color: $property-entry-color-icon-focused;
+  }
 }
 
 // This is for entires that are user set or that have been poked
@@ -51,7 +69,7 @@ $property-entry-color-error-clear: #e57373;
     }
   }
 
-  &.property-entry--rich-text, &.property-entry--switch {
+  &.property-entry--rich-text, &.property-entry--switch, &.property-entry--radio {
     .property-entry--label {
       color: $property-entry-color-error;
     }
@@ -95,7 +113,16 @@ $property-entry-color-error-clear: #e57373;
   }
 }
 
-.property-entry--switch {
+.property-entry--radio {
+  width: 100%;
+  display: flex;
+}
+
+.property-entry--switch, .property-entry--radio .property-entry--label, .property-entry--rich-text .property-entry--label {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  padding-right: 12px;
+  width: 100%;
 }
