--- a/core/client/theme/property-entries.scss
+++ b/core/client/theme/property-entries.scss
@@ -1,5 +1,3 @@
-$property-entry-error-height: 1rem;
-$property-entry-error-font-height: 0.65rem;
 $property-entry-color-default: #424242;
 $property-entry-color-error: #f44336;
 $property-entry-color-error-clear: #e57373;
@@ -14,14 +12,23 @@ $property-entry-files-delete-color-hover: #f44336;
 $property-entry-files-rejected-color: #e57373;
 $property-entry-files-rejected-color-hover: #f44336;
 
+$property-entry-error-height: 1.3rem;
+
 .property-entry-error {
-  color: $property-entry-color-error-clear;
+  color: $property-entry-color-error;
   height: $property-entry-error-height;
-  font-size: $property-entry-error-font-height;
+  font-size: 0.85rem;
 }
 
 .property-entry-icon {
   color: $property-entry-color-default;
+}
+
+.property-entry-description {
+  width: 100%;
+  position: relative;
+  text-align: justify;
+  font-size: 0.85rem;
 }
 
 .property-entry-input-menu-item-placeholder {
