--- a/core/client/theme/item-entry.scss
+++ b/core/client/theme/item-entry.scss
@@ -7,6 +7,11 @@
   padding-bottom: 10px;
 }
 
+.item-entry-wizard-title {
+  font-size: 1.2rem;
+  padding: 15px 15px 0 15px;
+}
+
 .item-entry-expansion-panel-details {
   display: block;
 }
