--- a/core/client/theme/item-entry.scss
+++ b/core/client/theme/item-entry.scss
@@ -22,9 +22,35 @@ $item-entry-wizard-color-warning: #f9a825;
 .item-entry-wizard-icon {
   &.item-entry-wizard-icon--failed {
     color: $item-entry-wizard-color-error;
-    font-size: 26px;
   }
   &.item-entry-wizard-icon--warning {
     color: $item-entry-wizard-color-warning;
+  }
+}
+
+.item-entry-dialog {
+  width: 1000px;
+  max-width: 1000px;
+
+  .item-entry-dialog-appbar {
+    position: relative;
+  }
+
+  .item-entry-dialog-title {
+    flex: 1;
+  }
+
+  .item-entry-dialog-content {
+    padding-bottom: 0;
+  }
+
+  .item-entry-dialog-actions {
+    display: flex;
+    border-top: solid 1px #ccc;
+    padding-top: 10px;
+
+    .item-entry-button-prev {
+      margin-right: auto;
+    }
   }
 }
