--- a/client/internal/theme/base.scss
+++ b/client/internal/theme/base.scss
@@ -13,7 +13,7 @@
   padding: 0;
 }
   
-html, body, #root, #app {
+html, body, #root, #main, #app {
   font-family: 'Open Sans', sans-serif;
   height: 100%;
   width: 100%;
