--- a/client/internal/theme/quill.scss
+++ b/client/internal/theme/quill.scss
@@ -29,9 +29,19 @@ $list-item-color: rgb(63, 81, 181);;
   }
 }
 
+.plain-text {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1rem;
+  white-space: pre-line;
+  width: 100%;
+  position: relative;
+  overflow-wrap: break-word;
+}
+
 .quill .ql-container, .rich-text {
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
+  overflow-wrap: break-word;
 
   .ql-editor {
     overflow: hidden;
@@ -39,118 +49,6 @@ $list-item-color: rgb(63, 81, 181);;
 
   p, li, blockquote, strong {
     text-align: justify;
-  }
-
-  .image {
-    position: relative;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    .image-container {
-      position: relative;
-      width: 100%;
-      max-width: 700px;
-  
-      .image-pad {
-        position: relative;
-        width: 100%;
-  
-        img {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-        }
-      }
-    }
-  }
-
-  .video {
-    position: relative;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    .video-container {
-      width: 100%;
-      max-width: 700px;
-      padding-bottom: 56.25%;
-      height: 0;
-      position: relative;
-  
-      iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      }
-    }
-  }
-
-  .file {
-    width: 100px;
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-
-    .file-container {
-      width: 100%;
-      align-items: center;
-      justify-content: center;
-      display: flex;
-      flex-direction: column;
-      cursor: pointer;
-
-      .file-icon {
-        width: 50px;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' focusable='false' viewBox='0 0 24 24' aria-hidden='true'%3E%3Cpath fill='rgba(0,0,0,0.8)' d='M6 2c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6H6zm7 7V3.5L18.5 9H13z'%3E%3C/path%3E%3C/svg%3E");
-        height: 75px;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-        position: relative;
-        display: block;
-
-        .file-extension {
-          display: block;
-          width: 100%;
-          font-size: 1rem;
-          text-align: right;
-          position: absolute;
-          bottom: 0;
-          font-weight: 900;
-          background-color: white;
-          border: solid 1px #ccc;
-          padding: 0 2px;
-          white-space: nowrap;
-          border-radius: 0 0 2px 2px;
-        }
-      }
-
-      .file-name {
-        display: block;
-        width: 100%;
-        text-align: center;
-        overflow: hidden;
-        padding-top: 5px;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
-
-      .file-size {
-        display: block;
-        width: 100%;
-        text-align: center;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        font-size: 0.7rem;
-      }
-    }
   }
 
   ul {
