--- a/client/internal/theme/quill.scss
+++ b/client/internal/theme/quill.scss
@@ -39,6 +39,8 @@ $list-item-color: rgb(63, 81, 181);;
 
 .quill .ql-container, .rich-text {
   font-size: 1rem;
+  position: relative;
+  overflow: hidden;
   overflow-wrap: break-word;
 
   .ql-editor {
