--- a/client/internal/theme/quill.scss
+++ b/client/internal/theme/quill.scss
@@ -35,6 +35,7 @@ $list-item-color: rgb(63, 81, 181);;
   width: 100%;
   position: relative;
   overflow-wrap: break-word;
+  text-align: justify;
 }
 
 .quill .ql-container, .rich-text {
